# balloon

./: Cargo.toml  spin.toml
assets/: index.html
assets/assets/dioxus/: merry-christmas-2023.js  merry-christmas-2023_bg.wasm
assets/assets/dioxus/snippets/dioxus-interpreter-js-603636eeca72cf05/: inline0.js
xmas2023/: Cargo.toml
xmas2023/src/: lib.rs
