[package]
name = "xmas2023"
authors = ["Seungjin Kim <seungjin@duck.com>"]
description = ""
version = "0.1.0"
edition = "2021"

[lib]
crate-type = [ "cdylib" ]

[dependencies]
anyhow = "1"
http = "0.2"
spin-sdk = { git = "https://github.com/fermyon/spin", branch = "main" }
serde_json = "1.0.108"
serde = { version = "1.0.193", features = ["derive"] }


